Update 30-03-2021 Printers on appsettings

--- a/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
@@ -147,6 +147,6 @@
         @Html.HiddenFor(model => model.RuloID)
         @Html.AntiForgeryToken()
         <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Delete</button> |
-        <a asp-action="Index" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
+        <a asp-action="Index" asp-route-positionruloid="@Model.RuloID" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
     </form>
 </div>
