--- a/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
@@ -45,7 +45,7 @@
             @Html.DisplayNameFor(model => model.IsToyota)
         </dt>
         <dd class="col-sm-10">
-            @Html.Raw(Model.IsToyota ? "YES" : "NO");
+            @Html.Raw(Model.IsToyota ? "YES" : "NO")
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PieceCount)
@@ -138,5 +138,5 @@
 </div>
 <div>
     <a asp-action="Edit" class="btn btn-sm btn-success" asp-route-ruloid="@Model.RuloID"><i class="lni lni-slice"></i> Edit</a> |
-    <a asp-action="Index" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
+    <a asp-action="Index" asp-route-positionruloid="@Model.RuloID" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
 </div>
